CMP Refactoring
- Logging simplified to today's pattern using System.Logger
- generics
- @Overrides
- Some formatting to make the code reasonably reafable
- Removal of NOI18N comments

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>